--- a/THESIS/index.Rmd
+++ b/THESIS/index.Rmd
@@ -5,6 +5,9 @@ date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 output: bookdown::gitbook
 documentclass: book
+classoption: openany
+lof: True
+lot: True
 bibliography: references.bib
 biblio-style: apalike
 link-citations: yes
