--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -375,3 +375,67 @@
   year={2015},
   publisher={Nature Publishing Group}
 }
+
+@misc{rlblogpost,
+    title={Deep Reinforcement Learning Doesn't Work Yet},
+    author={Irpan, Alex},
+    howpublished={\url{https://www.alexirpan.com/2018/02/14/rl-hard.html}},
+    year={2018}
+}
+
+@article{sutton1988learning,
+  title={Learning to predict by the methods of temporal differences},
+  author={Sutton, Richard S},
+  journal={Machine learning},
+  volume={3},
+  number={1},
+  pages={9--44},
+  year={1988},
+  publisher={Springer}
+}
+
+@misc{1606.01540,
+  Author = {Greg Brockman and Vicki Cheung and Ludwig Pettersson and Jonas Schneider and John Schulman and Jie Tang and Wojciech Zaremba},
+  Title = {OpenAI Gym},
+  Year = {2016},
+  Eprint = {arXiv:1606.01540},
+}
+
+@article{walt2011numpy,
+  title={The NumPy array: a structure for efficient numerical computation},
+  author={Walt, St{\'e}fan van der and Colbert, S Chris and Varoquaux, Gael},
+  journal={Computing in science \& engineering},
+  volume={13},
+  number={2},
+  pages={22--30},
+  year={2011},
+  publisher={IEEE Computer Society}
+}
+
+
+@incollection{NEURIPS2019_9015,
+title = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
+author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
+booktitle = {Advances in Neural Information Processing Systems 32},
+editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+pages = {8024--8035},
+year = {2019},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
+}
+
+@inproceedings{he2015delving,
+  title={Delving deep into rectifiers: Surpassing human-level performance on imagenet classification},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE international conference on computer vision},
+  pages={1026--1034},
+  year={2015}
+}
+
+@inproceedings{tsitsiklis1997analysis,
+  title={Analysis of temporal-diffference learning with function approximation},
+  author={Tsitsiklis, John N and Van Roy, Benjamin},
+  booktitle={Advances in neural information processing systems},
+  pages={1075--1081},
+  year={1997}
+}
