--- a/THESIS/04-results.Rmd
+++ b/THESIS/04-results.Rmd
@@ -12,13 +12,13 @@ A general tool for creating RL tasks was design (_Forest Fire Environment Maker 
 
 The ability of allowing an agent to change the CA configurations express the attempt to drive the CA to a desired global state. In the RL framework this is done by giving a reward to the agent at each emitted action. This was done by mere counting all cell states indicating unwanted behavior and then multiplying by some weight (usually negative). This was generalized into getting the frequency of any cell type and then multiplying by a weight to generate a score per cell type. Then all the scores were combined into a global score. In summary the used reward function was the dot product of the cell-states frequencies by some weights, with the semantics that weights for desirable states are greater than the unwanted ones.
 
-The particular environment that was used for this thesis is one that has the semantics of a "helicopter" trying to extinguish a forest fire. This is represented by an agent influencing the dynamics of a DSM and is as follows: The first component is a DSM with a lattice of size 3x3 with parameters $p=0.33$ (tree growth probability) and $f=0.066$ (tree spontaneous burning probability). The used boundary conditions were set to invariant using an extra exogenous cell type that it is not involved in any CA dynamics, we just called them "rocks". The starting lattice configuration was made via random sampling by cell with probability of choosing "tree" of $0.75$ and "fire" of $0.25$. The second component, the agent ("helicopter") has a starting potion in the middle of the lattice (_2nd row and column_), from there it can move in any direction of a Moore's neighborhood, thus the agent can choose from $9$ actions (_"Left-Up", "Up", "Right-Up", "Right", "Stay", "Left", "Left-Down", "Down", "Right-Down"_), then after arriving to its new destination the helicopter extinguishes the fire, represented by changing, if applicable, a "fire" cell to "empty". After some movements of the "helicopter" the forest fire CA is updated following the dynamics dictated by DSM. The specific sequence of agent movements and CA updates is: _move, update, move, move, update, move, move, update, move, move, ..._ (see \@ref(fig:thesis-3-3-env)). In accordance to the RL paradigm, at each performed action the environment must respond with a reward signal, in our setting this was $+1$ per "tree" cell and $-1$ per "fire" cell, in other words a balance between trees and fires. Finally the RL task was continuous.
+The particular environment that was used for this thesis is one that has the semantics of a "helicopter" trying to extinguish a forest fire. This is represented by an agent influencing the dynamics of a DSM and is as follows: The first component is a DSM with a lattice of size 3x3 with parameters $p=0.33$ (tree growth probability) and $f=0.066$ (tree spontaneous burning probability). The used boundary conditions were set to invariant using an extra exogenous cell type that it is not involved in any CA dynamics, we just called them "rocks". The starting lattice configuration was made via random sampling by cell with probability of choosing "tree" of $0.75$ and "fire" of $0.25$. The second component, the agent ("helicopter") has a starting position in the middle of the lattice (_2nd row and column_), from there it can move in any direction of a Moore's neighborhood, thus the agent can choose from $9$ actions (_"Left-Up", "Up", "Right-Up", "Right", "Stay", "Left", "Left-Down", "Down", "Right-Down"_), then after arriving to its new destination the helicopter extinguishes the fire, represented by changing, if applicable, a "fire" cell to "empty". After some movements of the "helicopter" the forest fire CA is updated following the dynamics dictated by DSM. The specific sequence of agent movements and CA updates is: _move, update, move, move, update, move, move, update, move, move, ..._ (see \@ref(fig:thesis-3-3-env)). In accordance to the RL paradigm, at each performed action the environment must respond with a reward signal, in our setting this was $+1$ per "tree" cell and $-1$ per "fire" cell, in other words a balance between trees and fires. Finally the RL task was continuous.
 
 We selected the parameters of the DMS by seeking a separation between the scales of $f$ and $p$ ($f \ll p$), since a steady state is reached when $\lim \frac {f}{p} \to 0$ [@drossel1992self] and we wanted to see if the agent would significatively alter the dynamics of the CA. In our case $\frac {f}{p}=$ `r 0.066/0.33`. Alongside, empirical tunning was conducted from running the environment with a random policy to select the exact values of $f$ and $p$ that would make the grid relatively active at each step. It is important to note that the steady state only appears on large grids, as smaller ones are subject to finite size effects [@drossel1992self], thus we paid more attention to the empirical second criterion. Nevertheless balancing the two parameters would be important in future grid scaling experiments.
 
 Moreover the FFEM tool adds two new cells types. A "rock" type that does not interact with anything and is used as a barrier to the fire dynamics, it is always constant. A "lake" type that behaves exactly like a "rock" but it marks special positions in the grid that can alter the "helicopter" internal state. For example an idea (yet to be implemented) is to make the "power" of the "helicopter" limited so it would need to use it "wisely" and then would go to a "lake" to recharge it, akin to refilling its tank to keep fighting the wild fire. Also the FFEM tool generalizes the "powers" of the "helicopter" allowing for the exchange of any cell type for another, this lets for the creation of environments with a diversity of semantics like: An environment where the agent has to put barriers or one where it has to strategically deforest to prevent the spread of fire or even one where it has to completly reorganize the CA lattice. Even more functionality was included like a deterministic mode, generalized reward functions and several termination conditions, to check all the FFEM features consult: *https://github.com/elbecerrasoto/gym-forest-fire*.
 
-(ref:thesis-3-3-env) Illustration of two transitions in the proposed environment. On time $t$ the helicopter is at 2nd row and column, then it moves to the left, on arriving to its new position it changes the "fire" cell to "empty". Then, at the next time step, it returns to its original position, however the CA was updated before its arrival, anyway the "fire" cell at the middle (not shown) is promptly eliminated and replaced by an "empty" cell. The parameter $m$ is an internal state of the environment, when it reaches $0$ the CA is updated at the next step, before the action takes place. The current reward $r$ is $+1$ per "tree" and $-1$ per "fire".
+(ref:thesis-3-3-env) Illustration of two transitions in the proposed environment. On time $t$ the helicopter is at 2nd row and column, then it moves to the left, on arriving to its new position it changes the "fire" cell to "empty". Then, at the next time step, it returns to its original position, however the CA was updated before its arrival, anyway the "fire" cell at the middle (not shown) is promptly eliminated and replaced by an "empty" cell. The parameter $m$ is an internal state of the environment, that is decreased by $1$ at each step, when it reaches $0$ the CA is updated at the next step, before the action takes place, and then $m$ is restored to it max value ($m=1$). The current reward $r$ is $+1$ per "tree" and $-1$ per "fire".
 ```{r thesis-3-3-env, fig.cap='(ref:thesis-3-3-env)', out.width='80%', fig.asp=.75, fig.align='center', echo=FALSE}
 knitr::include_graphics('pics/agent-env_3x3.png')
 ```
@@ -44,7 +44,7 @@ For the full code details refer to: *https://github.com/elbecerrasoto/CARL*
 
 The FFEM tool generates environments that follow the guidelines of the _Open AI Gym API_ (OAGA) [@1606.01540]. The API specifies that the observation should be a numerical vector, that is commonly returned as a _numpy_ $n$-dimensional array [@walt2011numpy]. In our implementation we instead returned a tuple of three _numpy arrays_ representing: the grid data (cell states), the position of the helicopter and the remaining moves ($m$) to CA updating. We made the knowledge of $m$ available to the agent to guarantee the Markov property. A more difficult RL task can be made by not knowing $m$ (just dropping its value from the tuple), thus shifting the system to a _Partially Observable Markov Decision Process_ (POMDP), where the hidden state $m$ should be infered by the agent. Strictly speaking our implementation is departing from the _Open AI Gym API_ observation specification, however it does it in favor of facilitating the data processing and if purity is insisted on, merely concatenating the data and reshaping it into a _numpy array_ would fix it.
 
-The input to the ANN models was a one-hot encoding of the CA grid concatenated with "helicopter" position and the $m$ remaining moves parameter. This was supported by a FFEM feature to indicate the output format of the CA lattice, that can be returned in plain numeric representation, one-hot encoding or by channels as the CA lattice can be interpreted as an image.
+The input to the ANN models was a one-hot encoding of the CA grid concatenated with the "helicopter" position and the $m$ remaining moves parameter. This was supported by a FFEM feature to indicate the output format of the CA lattice, that can be returned in plain numeric representation, one-hot encoding or by channels as the CA lattice can be interpreted as an image.
 
 ### ANN Architectures
 
